Mar 07 2004  devel  Fixed another bsd compile error
                    Revamped error reporting to print errors to console even
                     when silent if there are no clients.  Should force showing
                     fast-startup errors that got hidden before.
Mar 04 2004  devel  Fixed undefined function error on BSDs introduced from
                     other error catching
                    Fixed stupid config test copy and paste bug for GMP
                    Reordered orinoco monitor commands
                    More major gpsmap updates
                     Total rewrite of interpolation.  Previous code was 
                      terminally broken.  New interpolation algos are MUCH
                      more adept at handling "generic wardriving" data.
                     Moved interpolation to only process "relevant center"
                      (see previous gpsmap update) instead of every point
                     Fixed legend drawing when using default network colors
                      and doing power interpolation
                    Tweaked orinoco channel control - should eliminate errors
                     seen with some older drivers and -devel
Mar 03 2004  devel  Rewrote gpsmap network-center guessing to find groups of
                     sample points and use those
                    Started rewriting gpsmap to use GMP for math.  GMP is
                     now required.
                    Added support for ADMTek cards
Mar 01 2004  devel  Tweaked error reporting to client.
                    Fixed wtapfile support for new ethereal wiretap versions
                    Merged ifdefs from Thomas Dettbarn to fix compiling on 
                     some freebsd systems
Feb 28 2004  devel  Changed wtaplocaldump code to have better drive-ful error
                     messages
Feb 26 2004  devel  Smart determination of channel controls on new orinoco
                     drivers, correct exiting of rfmon on new orinoco drivers