@@ -1,3 +1,5 @@
+Mar 08 2004  devel  Fixed a segfault with a 0-length macaddr struct (exposed
+                     by an empty manuf map file).  No security implications.
 Mar 07 2004  devel  Fixed another bsd compile error
                     Revamped error reporting to print errors to console even
                      when silent if there are no clients.  Should force showing
